# fantasy-trade-engine

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
config/: __init__.py  team_composition.yml
data/: data_loading.py
utils/: io.py  mapping.py  scoring.py  services.py
